Bullet Continuous Collision Detection and Physics Library
Primary author and maintainer: Erwin Coumans

2007 Oct 22
	- All memory allocations go through btAlignedAlloc/btAlignedFree. User can override this to verify memory leaks
	- added a few more demos to AllBulletDemos
	- fix for one of the constructors of btHingeConstraint
	Thanks Marcus Hennix
	
2007 Oct 20
	- included glui, a GLUT/OpenGL based toolkit for some graphical user elements
	Removed dynamic_cast from glui, to allow linkage without rtti
	- added Box2D framework using glui, allowing all demos to run within one executable
	Thanks Erin Catto for the FrameWork skeleton (http://www.box2d.org)

2007 Ocy 17
	- Allow user to pass in their own memory (stack and pool) allocators, through collisionConfiguration. See demos how to use this

2007 Oct 14
	- Included working version of Cell SPU parallel optimized version for Libspe2 SPU task scheduler.
	This version compiles and runs on Playstation 3 Linux and IBM CellBlade, see BulletSpuOptimized.pdf for build instructions
	(Official Playstation 3 developers can request a SPURS version through Sony PS3 Devnet.)
	Thanks to IBM 'Extreme Blue' project for the contribution
	http://www-913.ibm.com/employment/us/extremeblue/ 
	Thanks Minh Cuong Tran, Benjamin Hoeferlin, Frederick Roth and Martina Huellmann
	for various contributions to get this initial Libspe2 parallel version up and running.

2007 Oct 13
	- made 'btCollisionShape::calculateLocalInertia' const
	Thanks to cgripeos, see http://www.bulletphysics.com/Bullet/phpBB3/viewtopic.php?f=9&t=1514
	- applied a large patch to remove warnings
	Thanks to Enrico, see http://www.bulletphysics.com/Bullet/phpBB3/viewtopic.php?f=9&t=1568
	- removed SSE includes, added #incude <string.h> for memset in Extras/quickstep, thanks Eternl Knight

2007 Oct 11
	- added Hashed Overlapping Pair Cache, recommended by Pierre Terdiman. It works like a charm, thanks Pierre and Erin Catto (code from Box2D)